--- a/服务器配置信息查询.md
+++ b/服务器配置信息查询.md
@@ -8,6 +8,9 @@
 | 硬盘  | lsscsi 磁盘型号；lsblk / 查看活动的raid级别 cat /proc/mdstat | 硬盘类型： lsblk -d -o name,rota  rota为1是HDD，为0是SSD                                                                                                                                                                                                                                                          |
 | 网络  |    lspci | grep -i ethernet 或者 lspci                                                                                                                                                                                                                                                                               | grep -i net                                                                                                                                                                                                         | ethtool enp125s0f0  查询带宽                                                                                                                                                                                                     |
 
+## 查询cpu的频率
+1. 真实的cpu频率：perf stat --timeout 3000 bash -c "while true; do continue; done"
+2. dmidecode -t processor #不一定准确
 
 ## 网卡型号查询
 1. ip a 查询up的网口， 并通过ethtool -i enp65s0f1np1查询Bus ID（总线标识符）
